# LiveDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/top/andnux/livedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/top/andnux/livedemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/top/andnux/livedemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
liblive/: CMakeLists.txt  build.gradle
liblive/src/androidTest/java/top/andnux/liblive/: ExampleInstrumentedTest.java
liblive/src/main/: AndroidManifest.xml
liblive/src/main/cpp/: live.cpp  queue.h
liblive/src/main/cpp/libfaac/: frame.c  quantize.c
liblive/src/main/cpp/librtmp/: rtmp.c  rtmp.h
liblive/src/main/java/top/andnux/liblive/jni/: LiveStateChangeListener.java  PushNative.java
liblive/src/main/java/top/andnux/liblive/params/: AudioParams.java  VideoParams.java
liblive/src/main/java/top/andnux/liblive/pusher/: AudioPusher.java  LivePusher.java  Pusher.java  VideoPusher.java
liblive/src/test/java/top/andnux/liblive/: ExampleUnitTest.java
